@@ -19,6 +19,7 @@ General Enhancements:
 * Added Equity (Temp) account type (Chris T)
 * Added description field to transaction and invoice screens (Chris T)
 * Removed ability to repost/delete transactions (Chris T)
+* Partsgroups can now be nested though this is not yet used by LSMB (Chris T)
 
 New RESTful Web Services Framework
 * Supports XML and JSON as input formats
